--- a/libs/config/config.default.json
+++ b/libs/config/config.default.json
@@ -22,7 +22,7 @@
                 { 
                   "Home"      : "home"
                  ,"Content"   : "content"
-                 ,"Portfolio" : "portfolio"
+                 ,"Forum"     : "forum"
                  ,"About us"  : "about"
                  ,"Contact"   : "contact"
                 }
